--- a/less/global.less
+++ b/less/global.less
@@ -35,6 +35,7 @@ p {
   line-height: 1.5;
   font-size: 1.6rem;
   padding-bottom: 10px;
+  font-weight: bold;
 }
 
 img {
