--- a/less/navigation.less
+++ b/less/navigation.less
@@ -12,11 +12,10 @@
     }
 
     h1 {
-        width: 35%;
-        padding: 2% auto;
+        width: 49%;
         @media @mobile {
             width: 100%;
-            margin: 5% 20%;
+            margin: 5% 36%;
         }
     }
 
